--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "index.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=310882137"/>
@@ -19,7 +19,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
   <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4265456770"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=47739289" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4223236927" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -53,19 +53,36 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </nav>
     </div>
-    <div class="clearfix colelem" id="pu34829"><!-- group -->
-     <div class="grpelem" id="u34829"><!-- content -->
-      <div class="fluid_height_spacer"></div>
+    <div class="SlideShowWidget clearfix colelem" id="slideshowu38498"><!-- none box -->
+     <div class="popup_anchor" id="u38499popup">
+      <div class="SlideShowContentPanel clearfix" id="u38499"><!-- stack box -->
+       <div class="SSSlide clip_frame grpelem" id="u38502"><!-- image -->
+        <img class="block ImageInclude" id="u38502_img" data-src="images/cactus-crop-u38502.jpg?crc=300133329" src="images/blank.gif?crc=4208392903" alt="" data-width="550" data-height="280"/>
+       </div>
+       <div class="SSSlide invi clip_frame grpelem" id="u38504"><!-- image -->
+        <img class="block ImageInclude" id="u38504_img" data-src="images/road-crop-u38504.jpg?crc=4124139096" src="images/blank.gif?crc=4208392903" alt="" data-width="550" data-height="280"/>
+       </div>
+       <div class="SSSlide invi clip_frame grpelem" id="u38500"><!-- image -->
+        <img class="block ImageInclude" id="u38500_img" data-src="images/trees-crop-u38500.jpg?crc=4028258840" src="images/blank.gif?crc=4208392903" alt="" data-width="550" data-height="280"/>
+       </div>
+      </div>
      </div>
-     <div class="grpelem" id="u34830"><!-- content -->
-      <div class="fluid_height_spacer"></div>
+     <div class="popup_anchor" id="u38513popup">
+      <div class="SlideShowCaptionPanel clearfix" id="u38513"><!-- stack box -->
+       <img class="SSSlideCaption grpelem" id="u38515-4" alt="Mauris sit amet tortor." width="254" height="44" src="images/u38515-4.png?crc=461704644"/><!-- rasterized frame -->
+       <img class="SSSlideCaption invi grpelem" id="u38516-4" alt="Lorem ipsum dolor sit amet." width="254" height="44" src="images/u38516-4.png?crc=306990279"/><!-- rasterized frame -->
+       <img class="SSSlideCaption invi grpelem" id="u38514-4" alt="Ut eget felis sed velit congue." width="254" height="44" src="images/u38514-4.png?crc=177733793"/><!-- rasterized frame -->
+      </div>
      </div>
-     <div class="clip_frame grpelem" id="u34827"><!-- image -->
-      <img class="block" id="u34827_img" src="images/untitled_by_elgama-d5hhapn-crop-u34827.jpg?crc=47024588" alt="" data-image-width="548" data-image-height="233"/>
+     <div class="popup_anchor" id="u38510-4popup">
+      <div class="SSPreviousButton clearfix" id="u38510-4"><!-- content -->
+       <p>&lt;</p>
+      </div>
      </div>
-     <div class="grpelem" id="u34841"><!-- state-based BG images -->
-      <img alt="Заголовок" src="images/blank.gif?crc=4208392903"/>
-      <div class="fluid_height_spacer"></div>
+     <div class="popup_anchor" id="u38508-4popup">
+      <div class="SSNextButton clearfix" id="u38508-4"><!-- content -->
+       <p>&gt;</p>
+      </div>
      </div>
     </div>
     <div class="clearfix colelem" id="pu35808"><!-- group -->
@@ -100,10 +117,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </nav>
    </div>
-   <div class="clearfix grpelem" id="pu34831-4"><!-- column -->
-    <img class="colelem" id="u34831-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u34831-4.png?crc=3933776005" data-image-width="146"/><!-- rasterized frame -->
-    <img class="colelem" id="u35822-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u35822-4.png?crc=3933776005" data-image-width="146"/><!-- rasterized frame -->
-   </div>
+   <img class="grpelem" id="u35822-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u35822-4.png?crc=3933776005" data-image-width="146"/><!-- rasterized frame -->
    <div class="clearfix grpelem" id="pmenuu36173"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu36173"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u36174"><!-- vertical box -->
@@ -121,22 +135,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </nav>
    </div>
-   <div class="clearfix grpelem" id="pmenuu34832"><!-- column -->
-    <nav class="MenuBar clearfix colelem" id="menuu34832"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u34833"><!-- vertical box -->
-      <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u34836"><!-- horizontal box -->
-       <img class="MenuItemLabel NoWrap grpelem" id="u34839" alt="Подробнее" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
-      </div>
+   <nav class="MenuBar clearfix grpelem" id="menuu35809"><!-- horizontal box -->
+    <div class="MenuItemContainer clearfix grpelem" id="u35810"><!-- vertical box -->
+     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u35813"><!-- horizontal box -->
+      <img class="MenuItemLabel NoWrap grpelem" id="u35815" alt="Подробнее" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
      </div>
-    </nav>
-    <nav class="MenuBar clearfix colelem" id="menuu35809"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u35810"><!-- vertical box -->
-      <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u35813"><!-- horizontal box -->
-       <img class="MenuItemLabel NoWrap grpelem" id="u35815" alt="Подробнее" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
-      </div>
-     </div>
-    </nav>
-   </div>
+    </div>
+   </nav>
    <div class="clearfix grpelem" id="pmenuu36197"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu36197"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u36198"><!-- vertical box -->
@@ -172,7 +177,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </nav>
     </div>
-    <img class="colelem" id="u34840-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No More Robots Майк Роуз. Его сообщение в Twitter привлекло инди-девелоперов со всего мира. Каждый из них захотел поделиться интересными (и не очень) историями, связанными с непростым процессом нейминга игры." src="images/u34840-4.png?crc=203195007" data-image-width="274"/><!-- rasterized frame -->
     <img class="colelem" id="u35819-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No More Robots Майк Роуз. Его сообщение в Twitter привлекло инди-девелоперов со всего мира. Каждый из них захотел поделиться интересными (и не очень) историями, связанными с непростым процессом нейминга игры." src="images/u35819-4.png?crc=203195007" data-image-width="274"/><!-- rasterized frame -->
    </div>
    <div id="u35596-wrapper">
@@ -187,7 +191,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div id="u35655-4-wrapper">
     <img id="u35655-4" alt="Наверх" src="images/u35655-4.png?crc=3992410581" data-image-width="96"/><!-- rasterized frame -->
    </div>
-   <div class="verticalspacer" data-offset-top="870" data-content-above-spacer="925" data-content-below-spacer="59"></div>
+   <div class="verticalspacer" data-offset-top="870" data-content-above-spacer="917" data-content-below-spacer="59"></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
@@ -196,7 +200,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u37719-a.png?crc=445710475" alt=""/>
    <img class="preload" src="images/u1060-r.png?crc=3997050153" alt=""/>
    <img class="preload" src="images/u1060-a.png?crc=151593522" alt=""/>
-   <img class="preload" src="images/u34841-r.png?crc=522824681" alt=""/>
    <img class="preload" src="images/u35820-r.png?crc=522824681" alt=""/>
    <img class="preload" src="images/u36180-r.png?crc=316806109" alt=""/>
    <img class="preload" src="images/u36180-a.png?crc=316806109" alt=""/>
@@ -204,7 +207,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u36188-a.png?crc=293193988" alt=""/>
    <img class="preload" src="images/u36192-r.png?crc=187296679" alt=""/>
    <img class="preload" src="images/u36192-a.png?crc=187296679" alt=""/>
-   <img class="preload" src="images/u34839-r.png?crc=71748046" alt=""/>
    <img class="preload" src="images/u35815-r.png?crc=71748046" alt=""/>
    <img class="preload" src="images/u36203-r.png?crc=4217473646" alt=""/>
    <img class="preload" src="images/u36203-a.png?crc=4217473646" alt=""/>
@@ -217,12 +219,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 16);return 0},g=function(g){for(var f=document.getElementsByTagName("link"),h=0;h<f.length;h++)if("text/css"==f[h].type){var i=(f[h].href||"").match(/\/?css\/([\w\-]+\.css)\?crc=(\d+)/);if(!i||!i[1]||!i[2])break;b[i[1]]=i[2]}f=document.createElement("div");f.className="version";f.style.cssText="display:none; width:1px; height:1px;";document.getElementsByTagName("body")[0].appendChild(f);for(h=0;h<Muse.assets.required.length;){var i=Muse.assets.required[h],l=i.match(/([\w\-\.]+)\.(\w+)$/),k=l&&l[1]?
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Некоторые файлы на сервере могут отсутствовать или быть некорректными. Очистите кэш-память браузера и повторите попытку. Если проблему не удается устранить, свяжитесь с разработчиками сайта.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musemenu","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musemenu","webpro","musewpslideshow","jquery.museoverlay","touchswipe","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
+Muse.Utils.initWidget('#slideshowu38498', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:3500,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu38498 */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
