--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=310882137"/>
   <title>News/page/1</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4265456770"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4223236927" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=458018445"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=365958920" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -28,12 +28,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="ppu847"><!-- column -->
-    <div class="clearfix colelem" id="pu847"><!-- group -->
-     <div class="grpelem" id="u847"><!-- content -->
-      <div class="fluid_height_spacer"></div>
-     </div>
-     <img class="grpelem" id="u1063-7" alt="Konstantin aka Goganihe Petrashko" src="images/u1063-7.png?crc=4166933354" data-image-width="683"/><!-- rasterized frame -->
+   <div class="clearfix grpelem" id="pu847"><!-- column -->
+    <div class="colelem" id="u847"><!-- content -->
+     <div class="fluid_height_spacer"></div>
     </div>
     <div class="clearfix colelem" id="pu1026"><!-- group -->
      <div class="grpelem" id="u1026"><!-- content -->
@@ -53,6 +50,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </nav>
     </div>
+   </div>
+   <a class="nonblock nontext" id="u38864" href="addnews.html" target="_blank"><!-- state-based BG images --><div id="u38864_states"><img alt="+Добавить новость" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+   <div class="clearfix grpelem" id="pu1063-7"><!-- column -->
+    <img class="colelem" id="u1063-7" alt="Konstantin aka Goganihe Petrashko" src="images/u1063-7.png?crc=4166933354" data-image-width="683"/><!-- rasterized frame -->
     <div class="SlideShowWidget clearfix colelem" id="slideshowu38498"><!-- none box -->
      <div class="popup_anchor" id="u38499popup">
       <div class="SlideShowContentPanel clearfix" id="u38499"><!-- stack box -->
@@ -116,9 +117,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u36167" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u36170-4"><!-- rasterized frame --><div id="u36170-4_clip"><img alt="1" width="11" height="36" src="images/u36170-4-a.png?crc=355493379"/></div></div></a>
      </div>
     </nav>
-   </div>
-   <img class="grpelem" id="u35822-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u35822-4.png?crc=3933776005" data-image-width="146"/><!-- rasterized frame -->
-   <div class="clearfix grpelem" id="pmenuu36173"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu36173"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u36174"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36177" href="newspage2.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36180" alt="2" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
@@ -129,20 +127,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36185" href="newspage3.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36188" alt="3" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
+   </div>
+   <img class="grpelem" id="u35822-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u35822-4.png?crc=3933776005" data-image-width="146"/><!-- rasterized frame -->
+   <div class="clearfix grpelem" id="pmenuu36189"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu36189"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u36190"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36191" href="newspage4.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36192" alt="4" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
      </div>
     </nav>
-   </div>
-   <nav class="MenuBar clearfix grpelem" id="menuu35809"><!-- horizontal box -->
-    <div class="MenuItemContainer clearfix grpelem" id="u35810"><!-- vertical box -->
-     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u35813"><!-- horizontal box -->
-      <img class="MenuItemLabel NoWrap grpelem" id="u35815" alt="Подробнее" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
-     </div>
-    </div>
-   </nav>
-   <div class="clearfix grpelem" id="pmenuu36197"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu36197"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u36198"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u36201" href="newspage5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u36203" alt="5" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
@@ -154,6 +146,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </nav>
    </div>
+   <nav class="MenuBar clearfix grpelem" id="menuu35809"><!-- horizontal box -->
+    <div class="MenuItemContainer clearfix grpelem" id="u35810"><!-- vertical box -->
+     <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u35813"><!-- horizontal box -->
+      <img class="MenuItemLabel NoWrap grpelem" id="u35815" alt="Подробнее" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
+     </div>
+    </div>
+   </nav>
    <div class="clearfix grpelem" id="ppu2056"><!-- column -->
     <div class="clearfix colelem" id="pu2056"><!-- group -->
      <div class="grpelem" id="u2056"><!-- content -->
@@ -191,7 +190,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div id="u35655-4-wrapper">
     <img id="u35655-4" alt="Наверх" src="images/u35655-4.png?crc=3992410581" data-image-width="96"/><!-- rasterized frame -->
    </div>
-   <div class="verticalspacer" data-offset-top="870" data-content-above-spacer="917" data-content-below-spacer="59"></div>
+   <div class="verticalspacer" data-offset-top="865" data-content-above-spacer="918" data-content-below-spacer="59"></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u1047-r.png?crc=363133327" alt=""/>
@@ -200,6 +199,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u37719-a.png?crc=445710475" alt=""/>
    <img class="preload" src="images/u1060-r.png?crc=3997050153" alt=""/>
    <img class="preload" src="images/u1060-a.png?crc=151593522" alt=""/>
+   <img class="preload" src="images/u38864_states-r.png?crc=420436925" alt=""/>
    <img class="preload" src="images/u35820-r.png?crc=522824681" alt=""/>
    <img class="preload" src="images/u36180-r.png?crc=316806109" alt=""/>
    <img class="preload" src="images/u36180-a.png?crc=316806109" alt=""/>
@@ -207,9 +207,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u36188-a.png?crc=293193988" alt=""/>
    <img class="preload" src="images/u36192-r.png?crc=187296679" alt=""/>
    <img class="preload" src="images/u36192-a.png?crc=187296679" alt=""/>
-   <img class="preload" src="images/u35815-r.png?crc=71748046" alt=""/>
    <img class="preload" src="images/u36203-r.png?crc=4217473646" alt=""/>
    <img class="preload" src="images/u36203-a.png?crc=4217473646" alt=""/>
+   <img class="preload" src="images/u35815-r.png?crc=71748046" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=334146796" alt=""/>
    <img class="preload" src="images/u1521-a.png?crc=92523392" alt=""/>
   </div>
