--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=3981835437"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=534547425" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=73853381" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -56,6 +56,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clearfix grpelem" id="pu39265-4"><!-- group -->
       <img class="grpelem" id="u39265-4" alt="thingiverse.com" width="156" height="44" src="images/u39265-4.png?crc=473371155"/><!-- rasterized frame -->
       <a class="nonblock nontext clearfix grpelem" id="u39277-4" href="https://www.thingiverse.com/krista_konstantin/designs" target="_blank"><!-- content --><p>+</p></a>
+     </div>
+     <div class="clearfix grpelem" id="pu39937-4"><!-- group -->
+      <img class="grpelem" id="u39937-4" alt="Boosty" width="107" height="44" src="images/u39937-4.png?crc=4221230739"/><!-- rasterized frame -->
+      <a class="nonblock nontext clearfix grpelem" id="u39938-4" href="https://boosty.to/konstantin.krista" target="_blank"><!-- content --><p>+</p></a>
      </div>
      <a class="nonblock nontext clearfix grpelem" id="u39197-4" href="https://vk.com/krista.konstantin" target="_blank"><!-- content --><p>+</p></a>
      <img class="grpelem" id="u39233-4" alt="BK" width="84" height="44" src="images/u39233-4.png?crc=4264108762"/><!-- rasterized frame -->
