--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contacts</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=3981835437"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=145334597" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=247378982"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4052527552" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -32,7 +32,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="grpelem" id="u847"><!-- content --></div>
      <img class="grpelem" id="u39247-4" alt="3D" width="92" height="131" src="images/u39247-4.png?crc=116229440"/><!-- rasterized frame -->
      <img class="grpelem" id="u39250-6" alt="Print Modeling" width="146" height="115" src="images/u39250-6.png?crc=130563105"/><!-- rasterized frame -->
-     <img class="grpelem" id="u39253-4" alt="Krista.Konstantin" width="688" height="131" src="images/u39253-4.png?crc=267931284"/><!-- rasterized frame -->
     </div>
     <div class="clearfix colelem" id="pu1026"><!-- group -->
      <div class="grpelem" id="u1026"><!-- content --></div>
@@ -41,7 +40,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="%d0%b1%d0%b5%d0%b7-%d0%b8%d0%bc%d0%b5%d0%bd%d0%b8-5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="Главная" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="%d0%b1%d0%b5%d0%b7-%d0%b8%d0%bc%d0%b5%d0%bd%d0%b8-5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="Галерея" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="https://www.thingiverse.com/krista_konstantin/designs"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="Галерея" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u39206"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u39209" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u39211" alt="Контакты" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
@@ -57,19 +56,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <img class="grpelem" id="u39265-4" alt="thingiverse.com" width="156" height="44" src="images/u39265-4.png?crc=473371155"/><!-- rasterized frame -->
       <a class="nonblock nontext clearfix grpelem" id="u39277-4" href="https://www.thingiverse.com/krista_konstantin/designs" target="_blank"><!-- content --><p>+</p></a>
      </div>
-     <div class="clearfix grpelem" id="pu39937-4"><!-- group -->
-      <img class="grpelem" id="u39937-4" alt="Boosty" width="107" height="44" src="images/u39937-4.png?crc=4221230739"/><!-- rasterized frame -->
-      <a class="nonblock nontext clearfix grpelem" id="u39938-4" href="https://boosty.to/konstantin.krista" target="_blank"><!-- content --><p>+</p></a>
-     </div>
      <a class="nonblock nontext clearfix grpelem" id="u39197-4" href="https://vk.com/krista.konstantin" target="_blank"><!-- content --><p>+</p></a>
      <img class="grpelem" id="u39233-4" alt="BK" width="84" height="44" src="images/u39233-4.png?crc=4264108762"/><!-- rasterized frame -->
      <img class="grpelem" id="u39274-4" alt="telegram" width="107" height="44" src="images/u39274-4.png?crc=4180632695"/><!-- rasterized frame -->
      <a class="nonblock nontext clearfix grpelem" id="u39280-4" href="https://t.me/Krista_Konstantin" target="_blank"><!-- content --><p>+</p></a>
     </div>
-    <div class="clip_frame clearfix colelem" id="u39955"><!-- image -->
-     <img class="position_content" id="u39955_img" src="images/%d0%b2%d1%81%d1%82%d0%b0%d0%b2%d0%bb%d0%b5%d0%bd%d0%bd%d0%be%d0%b5%20%d0%b8%d0%b7%d0%be%d0%b1%d1%80%d0%b0%d0%b6%d0%b5%d0%bd%d0%b8%d0%b5%20998x463.jpg?crc=3843319811" alt="" width="302" height="140"/>
-    </div>
-    <div class="verticalspacer" data-offset-top="466" data-content-above-spacer="465" data-content-below-spacer="80"></div>
+    <div class="verticalspacer" data-offset-top="327" data-content-above-spacer="326" data-content-below-spacer="173"></div>
    </div>
   </div>
   <div class="preload_images">
